# template-django

./: pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
